--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-* Release 2.0.0
+6/22/2020 Release 2.0.0
 	* Fixed Bug #6: Make tests run without main for changes in dmd 2.090
 
 9/17/2017 Release 1.2.0
